[package]
name = "pico-rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp2040-boot2 = "0.3.0"
util = { path = "../util" }
pico-hal = { path = "../hal" }
lock_api = "0.4.11"
aligned = "0.4.2"

[build-dependencies]
cc = "1.0.83"